--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goose-track-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AMIHbKA.github.io/goose-track-react-project/",
+  "homepage": "https://GoitStudentsWorks.github.io/react_node_fs71_AMIHbKA/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
